03-natgateway.tf
resource "aws_eip" "nat_eip" {
  vpc        = true
  depends_on = [aws_internet_gateway.ig]
  tags       = merge({ "Name" : "MC-${local.workspace}-EIP" }, local.tags)
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = element(aws_subnet.public[*].id, 0)
  depends_on    = [aws_internet_gateway.ig]
  tags          = merge({ "Name" : "MC-${local.workspace}-NAT-GW" }, local.tags)
}
